loopdowhile.Poucet1.scala.code
var sortie = false
var b = 0
while(sortie == false){
  for(i <- 0 to 4){
    avance();
    if (estSurBiscuit()){
      b = b +1;
    }
  }
  if(b =< 2){
    droite();
    b = 0
  }else if(b >= 3){
    gauche();
  }
}